@@ -1,3 +1,4 @@
+220719 graph sanity check and cmd block fixed
 220719 bug fix, and auto debugging
 220618 merge three atari env 
 220613 bug fix
